Added sections on the left side of the screen, included the images folder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>Spotify Screen</title>
 </head>
 <body>
-    <div id="topLeftWidget"></div>
+    <div id="leftside">
+        <div id="top2widgets">
+            <p>Home</p>
+            <p>Search</p>
+        </div>
+        <div id="selection">
+            <h1>Your Playlists</h1>
+            <div id="playlists">
+                <div class="playlist">
+                    <img src="" alt="favorite playlist">
+                    <p>Favorite</p>
+                </div>
+                <div class="playlist"></div>
+                <div class="playlist"></div>
+                <div class="playlist"></div>
+                <div class="playlist"></div>
+                <div class="playlist"></div>
+                <div class="playlist"></div>
+                <div class="playlist"></div>
+                <div class="playlist"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
