Added everything needed on the left side

--- a/index.html
+++ b/index.html
@@ -15,19 +15,38 @@
             <h1>Your Playlists</h1>
             <div id="playlists">
                 <div class="playlist">
-                    <img src="" alt="favorite playlist">
+                    <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
                     <p>Favorite</p>
                 </div>
-                <div class="playlist"></div>
-                <div class="playlist"></div>
-                <div class="playlist"></div>
-                <div class="playlist"></div>
-                <div class="playlist"></div>
-                <div class="playlist"></div>
-                <div class="playlist"></div>
-                <div class="playlist"></div>
+                <div class="playlist">
+                    <img src="./hotbarImageFiles/gaming setup wallpaper.jpg" alt="second playlist">
+                    <p>Second Playlist</p>
+                </div>
+                <div class="playlist">
+                    <img src="./hotbarImageFiles/house.jpg" alt="third playlist">
+                    <p>Third Playlist</p>
+                </div>
+                <div class="playlist">
+                    <img src="./hotbarImageFiles/scribble.png" alt="fourth playlist">
+                    <p>Fourth Playlist</p>
+                </div>
+                <div class="playlist">
+                    <img src="./hotbarImageFiles/smile.png" alt="fifth playlist">
+                    <p>Fifth Playlist</p>
+                </div>
+                <div class="playlist">
+                    <img src="./hotbarImageFiles/smiley10.png" alt="sixth playlist">
+                    <p>Sixth Playlist</p>
+                </div>
+                <div class="playlist">
+                    <img src="./hotbarImageFiles/smileyFace3.png" alt="Seventh Playlist">
+                    <p>Seventh Playlist</p>
+                </div>
             </div>
         </div>
+    </div>
+    <div id="mainPage">
+        
     </div>
 </body>
 </html>
