--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Screen</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="leftside">
@@ -46,7 +47,7 @@
         </div>
     </div>
     <div id="mainPage">
-        
+
     </div>
 </body>
 </html>
