Added the playlist images and playlist descriptions on the left side

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>Search</p>
         </div>
         <div id="selection">
-            <h1>Your Playlists</h1>
+            <h1 id="yourPlaylist">Your Playlists</h1>
             <div id="playlists">
                 <div class="playlist">
                     <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
