Added new image files for the playlist and made new sections for the new playlists

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Screen</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="leftSidePanel.css">
 </head>
 <body>
     <div id="leftside">
-        <div id="top2widgets">
+        <div id="leftsideStuff">
+            <div id="top2widgets">
             <p>Home</p>
             <p>Search</p>
         </div>
@@ -40,10 +41,23 @@
                     <p>Sixth Playlist</p>
                 </div>
                 <div class="playlist">
-                    <img src="./hotbarImageFiles/smileyFace3.png" alt="Seventh Playlist">
+                    <img src="./hotbarImageFiles/smileyFace3.png" alt="seventh Playlist">
                     <p>Seventh Playlist</p>
                 </div>
+                <div class="playlist">
+                    <img src="./hotbarImageFiles/f1_Ferrari_procreate_DG1_picture.png" alt="eighth Playlist">
+                    <p>Eighth Playlist</p>
+                </div>
+                <div class="playlist">
+                    <img src="./hotbarImageFiles/mugpicture2.jpg" alt="ninth Playlist">
+                    <p>Ninth Playlist</p>
+                </div>
+                <div class="playlist">
+                    <img src="./hotbarImageFiles/chair.jpg" alt="tenth Playlist">
+                    <p>Tenth Playlist</p>
+                </div>
             </div>
+        </div>
         </div>
     </div>
     <div id="mainPage">
