Added new files for better organization, added new elements to the panels, changed the style for the main panel

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Screen</title>
     <link rel="stylesheet" href="leftSidePanel.css">
+    <link rel="stylesheet" href="centerPanel.css">
+    <link rel="stylesheet" href="bottomPanel.css">
 </head>
 <body>
     <div id="leftside">
@@ -61,6 +63,46 @@
         </div>
     </div>
     <div id="mainPage">
+        <div id="topLayer">
+            <div class="topLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="topLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="topLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="topLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="topLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="topLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="topLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="topLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+        </div>
+        <div id="middleLayer">
+            
+        </div>
+        <div id="bottomLayer"></div>
+    </div>
+    <div id="bottomPanel">
 
     </div>
 </body>
