Included new elements for the middle layer

--- a/index.html
+++ b/index.html
@@ -98,7 +98,38 @@
             </div>
         </div>
         <div id="middleLayer">
-            
+            <div class="middleLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="middleLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="middleLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="middleLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="middleLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="middleLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="middleLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="middleLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
         </div>
         <div id="bottomLayer"></div>
     </div>
