Added elements to the bottom panel and added styles for it

--- a/index.html
+++ b/index.html
@@ -131,7 +131,40 @@
                 <p>Favorite</p>
             </div>
         </div>
-        <div id="bottomLayer"></div>
+        <div id="bottomLayer">
+            <div class="bottomLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="bottomLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="bottomLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="bottomLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="bottomLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="bottomLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="bottomLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+            <div class="bottomLayerSelection">
+                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
+                <p>Favorite</p>
+            </div>
+        </div>
     </div>
     <div id="bottomPanel">
 
