Added a play btn and last played and styles those

--- a/index.html
+++ b/index.html
@@ -135,34 +135,32 @@
             <div class="bottomLayerSelection">
                 <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
                 <p>Favorite</p>
+                <p>Last Played: 5/12/2023</p>
+                <button>Play</button>
             </div>
             <div class="bottomLayerSelection">
                 <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
                 <p>Favorite</p>
+                <p>Last Played: 1/1/2023</p>
+                <button>Play</button>
             </div>
             <div class="bottomLayerSelection">
                 <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
                 <p>Favorite</p>
+                <p>Last Played: 2/11/2023</p>
+                <button>Play</button>
             </div>
             <div class="bottomLayerSelection">
                 <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
                 <p>Favorite</p>
+                <p>Last Played: 1/23/2023</p>
+                <button>Play</button>
             </div>
             <div class="bottomLayerSelection">
                 <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
                 <p>Favorite</p>
-            </div>
-            <div class="bottomLayerSelection">
-                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
-                <p>Favorite</p>
-            </div>
-            <div class="bottomLayerSelection">
-                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
-                <p>Favorite</p>
-            </div>
-            <div class="bottomLayerSelection">
-                <img src="./hotbarImageFiles/adventure_up.png" alt="favorite playlist">
-                <p>Favorite</p>
+                <p>Last Played: 10/1/2023</p>
+                <button>Play</button>
             </div>
         </div>
     </div>
