--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A customized spotify screen">
     <title>Spotify Screen</title>
     <link rel="stylesheet" href="leftSidePanel.css">
     <link rel="stylesheet" href="centerPanel.css">
